# klappstuhl.py

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Makefile  conf.py  index.rst  intro.rst  make.bat  requirements.txt
docs/api/: client.rst  enums.rst  errors.rst  file.rst  models.rst
examples/: media_and_render.py  quickstart.py
klappstuhl/: __init__.py  client.py  enums.py  errors.py  file.py  http.py  models.py
tests/: conftest.py  test_client.py  test_errors.py  test_file.py  test_models.py
