[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name (what you `pip install`). The import package is `klappstuhl`
# (the directory below) — same split as discord.py: `pip install discord.py`,
# `import discord`.
name = "klappstuhl.py"
version = "0.4.2"
description = "A fast, fully-typed async Python wrapper for the klappstuhl.me API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "klappstuhlpy" }]
keywords = [
    "klappstuhl",
    "klappstuhl.me",
    "api",
    "async",
    "aiohttp",
    "image-hosting",
    "screenshot",
    "wrapper",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["aiohttp>=3.9,<4"]

[project.urls]
Homepage = "https://github.com/klappstuhlpy/klappstuhl.py"
Documentation = "https://klappstuhlpy.readthedocs.io/en/stable/"
Repository = "https://github.com/klappstuhlpy/klappstuhl.py"
Issues = "https://github.com/klappstuhlpy/klappstuhl.py/issues"
"API Reference" = "https://klappstuhl.me/api/docs"

[project.optional-dependencies]
speed = ["aiohttp[speedups]>=3.9,<4"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.sdist]
include = ["/klappstuhl", "/README.md", "/LICENSE", "/CHANGELOG.md"]

[tool.hatch.build.targets.wheel]
packages = ["klappstuhl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "C4", "RUF"]
# RUF002/RUF003: prose in docstrings/comments intentionally uses en-dashes, ×, etc.
ignore = ["B008", "RUF002", "RUF003"]

[tool.mypy]
# 3.10 is the lowest target this mypy analyses with; the library itself still
# runs on 3.9 (checked in CI via pytest across 3.9–3.13).
python_version = "3.10"
strict = true
warn_unused_ignores = true
